PROJECT( CreateDFD )

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# Boost
SET(Boost_USE_STATIC_LIBS ON)

FIND_PACKAGE( Boost REQUIRED COMPONENTS system filesystem )
IF ( Boost_FOUND )
  INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
ENDIF()

# Glog
FIND_PACKAGE( Glog )
IF ( GLOG_FOUND )
	INCLUDE_DIRECTORIES( ${GLOG_INCLUDE_DIRS} )
ENDIF()

# Target
FILE( GLOB SRCS "*.cpp" )
ADD_LIBRARY( CreateDFD STATIC ${SRCS} )
TARGET_LINK_LIBRARIES( CreateDFD ${Boost_LIBRARIES} )
TARGET_LINK_LIBRARIES( CreateDFD ${GLOG_LIBRARIES} )

ADD_EXECUTABLE( CreateDFDMain main.c )
TARGET_LINK_LIBRARIES( CreateDFDMain CreateDFD )
