PROJECT( CreateDFDTest )

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# Boost
FIND_PACKAGE( Boost REQUIRED )
IF ( Boost_FOUND )
  INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
ENDIF()


# GMock
FIND_PATH( GMOCK_ROOT gmock/gmock.hpp
				/usr/local/include )
SET( GMOCK_SRCS ${GMOCK_ROOT}/gmock-gtest-all.cc ${GMOCK_ROOT}/gmock_main.cc )
INCLUDE_DIRECTORIES( ${GMOCK_ROOT} )

# Test
INCLUDE_DIRECTORIES( "../src" )

FILE( GLOB TESTS "*.cpp" )
ADD_EXECUTABLE( CreateDFDTest ${TESTS} ${GMOCK_SRCS} )
TARGET_LINK_LIBRARIES( CreateDFDTest CreateDFD )
